--- a/Brico/package.json
+++ b/Brico/package.json
@@ -15,6 +15,7 @@
     "motion": "^12.10.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-joyride": "^2.9.3",
     "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
