--- a/Brico/package.json
+++ b/Brico/package.json
@@ -16,7 +16,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-joyride": "^2.9.3",
-    "react-router-dom": "^7.6.0"
+    "react-router-dom": "^7.6.0",
+    "styled-components": "^6.1.18"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
